# media-control

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: now-playing-live.py  xbar-now-playing.1s.py
scripts/: bump-version.sh
